# avm

./: .gitignore  .gitmodules  AGENTS.md  README.md  conanfile.py
.github/workflows/: build.yml
cmake/: aemu-conan-deps.cmake
docs/: GRAPHICS_ARCHITECTURE.md  PREBUILTS.md  PRUNE_PLAN.md  core-only-agent-audit.md
scripts/: bootstrap-prebuilts.sh  build_headless_macos.sh  macos-release-entitlements.plist  package_macos_app.sh  sign_macos_distribution.sh
shell/: .gitignore  CMakeLists.txt  LICENSE  MacMu.mm
shell/core/: frame_consumer.cpp  frame_consumer.h  guest_input_sender.cpp  guest_input_sender.h  input_sender.cpp  input_sender.h  machine_manager.cpp  machine_manager.h  qemu_launcher.cpp  qemu_launcher.h  shell_options.cpp  shell_options.h
shell/guest_agent/: MacMuAgent.java  file_contexts  fstab.ranchu  init.ranchu.rc  macmu-agent.rc  macmu-init.rc
shell/guest_input/: MacMuInputServer.java
shell/protocol/: macmu_input_protocol.h  metal_shader.h  shell_constants.h  surface_metadata.h  viewport.cpp  viewport.h
shell/tools/: merge_newc.py  wrap_ext4_gpt.py
shell/ui/: macmu_input_view.h  macmu_input_view.mm  macmu_shell.mm  macmu_surface_renderer.h  macmu_surface_renderer.mm
